Add latex engine preset

--- a/spine.tex
+++ b/spine.tex
@@ -1,9 +1,10 @@
-
+%!TEX program=xelatex
 %---------------------------------------------------------------------------%
 % @Author Onns
 % @Date: 2020-10-08 13:35:10
 % @Version 1.0
 %---------------------------------------------------------------------------%
+
 \documentclass[UTF8]{ctexbook}
 \usepackage[paper=a4paper,margin=3cm]{geometry}
 
